HMIYC-152 | fixes based on Claude review